fixed contrast and wireframe

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -177,3 +177,7 @@ iframe {
 .contact div {
   margin: auto;
 }
+
+a {
+  color: aqua;
+}
